--- a/templates/lista_impianti.html
+++ b/templates/lista_impianti.html
@@ -116,6 +116,20 @@
         .search-form button:hover {
             background-color: #45a049;
         }
+
+        /* Stile per il pulsante di modifica */
+        .edit-button {
+            background-color: #FFEB3B;
+            color: black;
+            padding: 8px 16px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .edit-button:hover {
+            background-color: #FBC02D;
+        }
     </style>
 
     <script>
@@ -158,6 +172,7 @@
                         <th><input type="checkbox" onclick="toggleSelectAll(this)"></th>
                         <th>Nome Impianto</th>
                         <th>Indirizzo Impianto</th>
+                        <th>Azioni</th> <!-- Aggiunta della colonna Azioni -->
                     </tr>
                 </thead>
                 <tbody>
@@ -169,11 +184,15 @@
                                 class="impianto-checkbox"></td>
                         <td>{{ impianto.nome_impianto }}</td>
                         <td>{{ impianto.indirizzo_impianto }}</td>
+                        <td>
+                            <a href="{{ url_for('modifica_impianto', impianto_id=impianto.id) }}"
+                                class="edit-button">Modifica</a>
+                        </td> <!-- Aggiunta del pulsante Modifica -->
                     </tr>
                     {% endfor %}
                     {% else %}
                     <tr>
-                        <td colspan="3" style="text-align: center;">Nessun impianto trovato.</td>
+                        <td colspan="4" style="text-align: center;">Nessun impianto trovato.</td>
                     </tr>
                     {% endif %}
                 </tbody>
