implementazione funzioni base di gestione dei cassoni

--- a/templates/index.html
+++ b/templates/index.html
@@ -159,6 +159,12 @@
             <a href="{{ url_for('lista_impianti') }}" class="button">Lista Impianti</a>
             <a href="{{ url_for('aggiungi_impianto') }}" class="button">Aggiungi Impianto</a>
         </div>
+
+        <!-- Quarta colonna -->
+        <div class="column">
+            <a href="{{ url_for('lista_cassoni') }}" class="button">Lista Cassoni</a>
+            <a href="{{ url_for('aggiungi_cassone') }}" class="button">Aggiungi Cassone</a>
+        </div>
     </div>
 
     <script>
